--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "mlc-llm"]
 	path = apps/simulacrai_mlc/libs/mlc-llm
-	url = https://github.com/mlc-ai/mlc-llm
+	url = https://github.com/mlc-ai/mlc-llm.git
 	branch = main
 [submodule "tvm-unity"]
 	path = apps/simulacrai_mlc/libs/tvm-unity
-	url = https://github.com/mlc-ai/relax
+	url = https://github.com/mlc-ai/relax.git
 	branch = mlc
